kubernetes/apps/media/pasta/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pasta-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "PASTA"
    homepage.shamubernetes.com/description: "Manage Plex audio and subtitle tracks"
    homepage.shamubernetes.com/group: "Media"
    homepage.shamubernetes.com/order: "70"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "selfhst:pasta"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "pasta.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: pasta
      port: 80
